--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -31,14 +31,6 @@ jobs:
         with:
           fetch-depth: 0
 
-      - name: List Contributors
-        shell: pwsh
-        run: ./list-contributors.ps1
-
-      - name: Update Docs
-        shell: pwsh
-        run: ./Update-Docs.ps1
-
       - name: Setup Pages
         uses: actions/configure-pages@v3
 
@@ -59,6 +51,10 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+      - name: Diagnostic Details
+        run: |
+          echo "${{ steps.deployment.outputs.page_url }}"
+
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
