--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -52,9 +52,11 @@ jobs:
     needs: build
     steps:
       - name: Diagnostic Details
-        run: |
-          echo "${{ steps.deployment.outputs.page_url }}"
+        run: echo "${{ steps.deployment.outputs.page_url }}"
 
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
+
+      - name: Diagnostic Details
+        run: echo "${{ steps.deployment.outputs.page_url }}"
